[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "danio"
version = "0.5.1"
description = "ORM for asyncio world by dataclass"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "strongbugman", email = "strongbugman@gmail.com"}
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "databases>=0.6.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.18.0",
    "pytest-cov>=2.5.1",
    "aiomysql>=0.1.1",
    "mypy>=0.910",
    "ruff>=0.1.0",
    "types-PyMySQL>=1.0.2",
    "mkdocs-material>=8.2.3",
    "codecov>=2.1.12",
    "aiosqlite>=0.17.0",
    "asyncpg>=0.25.0",
    "aiopg>=1.3.3",
    "click>=8.0.0",
    "Markdown>=3.3.7"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["danio*"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "RUF"]
ignore = [
    "S101",  # allow assert in tests and validation
    "E501",  # let ruff format handle line wrapping, ignore lint error for unsafe strings
    "UP006", # keep typing.List/Dict for Python 3.8 compatibility
    "UP007", # keep typing.Optional/Union for Python 3.8 compatibility
    "UP045", # keep typing.Optional/Union for Python 3.8 compatibility
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
